--- a/webLayout.html
+++ b/webLayout.html
@@ -8,9 +8,9 @@
   <!-- icon -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <!-- font -->
-  <link rel="stylesheet" href="../common/Pretendard.css">
+  <link rel="stylesheet" href="./common/Pretendard.css">
   <!-- reset -->
-  <link rel="stylesheet" href="../common/minireset.min.css">
+  <link rel="stylesheet" href="./common/minireset.min.css">
   <!-- style -->
   <link rel="stylesheet" href="./style.css">
   <style>
