--- a/webLayout.html
+++ b/webLayout.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- og -->
+  <meta property="og:title" content="221121_web_김건호">
+<meta property="og:description" content="@keyfram ezen 09:00 { display: none } 18:00 { display : block }">
+<meta property="og:image" content="./images/og.png">
+<meta property="og:url" content="https://frdytheme.github.io/webLayout_frdy/webLayout.html">
+
   <title>webLayout</title>
   <!-- icon -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
